# tablebases

./: .clang-format  CMakeLists.txt
include/: pieces.h
test/: test.cpp
